added build fixes and mapping tools